@@ -29,7 +29,11 @@ Changes with Apache 1.2.1
      lockfile in any location.  It previously defaulted to /usr/tmp/htlock.
      [Somehow it took four of us: Randy Terbush, Jim Jagielski, Dean Gaudet,
      Marc Slemko]
-  
+
+  *) Request processing now retains state of whether or not the request
+     body has been read, so that internal redirects and subrequests will
+     not try to read it twice (and block). [Roy Fielding]
+
   *) Add a placeholder in modules/Makefile to avoid errors with certain
      makes. [Marc Slemko]
 
